[gd_scene load_steps=2 format=3 uid="uid://bxwj5kq8rgmn4"]

[ext_resource type="Script" uid="uid://dqvwn8tg0h2gy" path="res://Scripts/game_ui.gd" id="1_game_ui"]

[node name="GameUI" type="CanvasLayer"]
script = ExtResource("1_game_ui")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 100.0
grow_horizontal = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 400

[node name="Player1Panel" type="PanelContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/Player1Panel"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="TitleLabel" type="Label" parent="MarginContainer/HBoxContainer/Player1Panel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 1, 0, 1)
theme_override_font_sizes/font_size = 24
text = "JUGADOR 1"
horizontal_alignment = 1

[node name="LivesLabel" type="Label" parent="MarginContainer/HBoxContainer/Player1Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Vidas: ❤️❤️❤️"
horizontal_alignment = 1

[node name="ScoreLabel" type="Label" parent="MarginContainer/HBoxContainer/Player1Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Score: 0"
horizontal_alignment = 1

[node name="Player2Panel" type="PanelContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/Player2Panel"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="TitleLabel" type="Label" parent="MarginContainer/HBoxContainer/Player2Panel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0, 1, 1)
theme_override_font_sizes/font_size = 24
text = "JUGADOR 2"
horizontal_alignment = 1

[node name="LivesLabel" type="Label" parent="MarginContainer/HBoxContainer/Player2Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Vidas: ❤️❤️❤️"
horizontal_alignment = 1

[node name="ScoreLabel" type="Label" parent="MarginContainer/HBoxContainer/Player2Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Score: 0"
horizontal_alignment = 1

[node name="GameOverPanel" type="Panel" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -100.0
offset_right = 200.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="GameOverPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="GameOverLabel" type="Label" parent="GameOverPanel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_font_sizes/font_size = 32
text = "GAME OVER"
horizontal_alignment = 1

[node name="WinnerLabel" type="Label" parent="GameOverPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "¡JUGADOR X GANA!"
horizontal_alignment = 1

[node name="StartButton" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = 50.0
offset_right = 100.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 20
text = "INICIAR JUEGO"

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
